# CS50

./: .gitignore
Factorial/: a.out
IntroToCS/Factorial/: fac.c
IntroToCS/Fib_seq/: a.out  fib.c
IntroToCS/Sum_of_digits/: a.out
IntroToCS/Voting_System/: CMakeLists.txt  Makefile  README.MD
IntroToCS/Voting_System/lib/: CMakeLists.txt
IntroToCS/Voting_System/lib/candidate/: CMakeLists.txt  candidate.c  candidate.h
IntroToCS/Voting_System/src/: CMakeLists.txt  main.c
IntroToCS/binary_search/: a.out  bin_search.c
IntroToCS/collatz/: a.out
IntroToCS/filter-less/: Makefile  README.md  helpers.c  helpers.h
IntroToCS/inheritance/: a.out  inheritance.c
IntroToCS/votes/include/: candidate.c  candidate.h
Sum of Digits/: dig_sum.c
collatz/: collatz.c
power_of/: a.out  power.c
votes/src/: a.out  candidate.h  main.c
